# state-reconciler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: filesystem_layout.py  git_repo_state.py  parallel_fixpoint.py
src/state_reconciler/: __init__.py  cancellation.py  convergence.py  drift.py  executor.py  observer.py  ordering.py  partition.py  reconciler.py  step.py
tests/: support.py  test_cancellation.py  test_convergence.py  test_drift.py  test_executor.py  test_observer.py  test_ordering.py  test_pipeline.py  test_reconciler.py  test_step_lifecycle.py
