[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "state-reconciler"
version = "0.1.1"
description = "A domain-agnostic reconciliation kernel - declare desired state as Steps, then converge and self-verify."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Grzegorz Stolarz" }]
keywords = ["reconciliation", "desired-state", "idempotent", "convergence", "topological-sort", "state-machine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/pizgariu/state-reconciler"
Repository = "https://github.com/pizgariu/state-reconciler"
Changelog = "https://github.com/pizgariu/state-reconciler/blob/master/CHANGELOG.md"
Issues = "https://github.com/pizgariu/state-reconciler/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/state_reconciler"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501: dense explanatory comments run long by design, line width is left to a formatter not the linter
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=state_reconciler --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["state_reconciler"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:", "@(abc\\.)?abstractmethod"]
